# scviz

./: .git-cliff-docs.toml  .git-cliff.toml  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  README2.md  index.html  mkdocs.yml  notes.md  objects.inv  pyproject.toml  pytest.ini  scviz_planning.docx  sitemap.xml  todo.md
.github/workflows/: changelog-preview.yml  changelog.yml  ci.yml  joss-draft-pdf.yml  python-package.yml  uniprot-schema-check.yml
CHANGELOG/: index.html
admonitions/: index.html
assets/: diann_report.parquet
code-examples/: index.html
content-tabs/: index.html
contributing/: index.html
dev/: dev_OOP.ipynb  dev_Uniprot_AccessionGeneSymbol (Marion Pang's conflicted copy).ipynb  dev_Uniprot_AccessionGeneSymbol.ipynb  dev_clustermap.ipynb  dev_diann.ipynb  dev_enrichment.ipynb  dev_import.ipynb  dev_imputation.ipynb  dev_obsimport.ipynb  dev_scanpy.ipynb  dev_uniquepep.ipynb  functions_to_add.py  import_functions.py  pd_pep_short.txt  pd_prot.txt  scviz_planning.docx  ~$viz_planning.docx
dev/CODE_OF_CONDUCT/: index.html
dev/contributing/: index.html
dev/uns/: Sample_colors.csv
diagram/: index.html
docs/: CHANGELOG.md  admonitions.md  code-examples.md  content-tabs.md  contributing.md  diagram.md  index.md
docs/assets/: marion_20250515_scpviz.pdLayout  pd_prot_short.txt  scpviz_logo.ai
docs/dev/: contributing.md
docs/reference/: TrackedDataFrame.md  analysis_mixins.md  core_mixins.md  editing_mixins.md  hidden_functions.md  identifier_mixins.md  index.md  metadata_mixins.md  overview.md  pAnnData.md  plotting.md  utils.md
docs/reference/pAnnData/: analysis_mixins.md  core_mixins.md  editing_mixins.md  hidden_functions.md  identifier_mixins.md  import_mixin.md  metadata_mixins.md  pAnnData.md  plot_mixin.md
docs/stylesheets/: extra.css
docs/tutorials/: de.md  enrichment.md  filtering.md  importing.md  imputation.md  index.md  installation.md  plotting.md  quickstart.ipynb  quickstart.md  single_cell.md
paper/: paper.bib  paper.md
reference/: index.html
reference/TrackedDataFrame/: index.html
reference/overview/: index.html
reference/pAnnData/analysis_mixins/: index.html
reference/pAnnData/core_mixins/: index.html
reference/pAnnData/editing_mixins/: index.html
reference/pAnnData/hidden_functions/: index.html
reference/pAnnData/identifier_mixins/: index.html
reference/pAnnData/import_mixin/: index.html
reference/plotting/: index.html
reference/utils/: index.html
search/: search_index.json
src/: classes.dot  packages.dot
src/scpviz/: __init__.py  enrichment.py  plotting.py  setup.py  utils.py
src/scviz/: TrackedDataFrame.py  __init__.py  data_utils.py  enrichment.py  obs_utils.py  pAnnData.py  pAnnData_legacy.py  plotting.py  setup.py  utils.py
src/scviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  data.xlsx  data_fn.csv  data_norm.csv  test_TrackedDataFrame.py  test_diann.parquet  test_diann_prot.tsv  test_enrichment.py  test_pAnnData_analysis.py  test_pAnnData_base.py  test_pAnnData_editing.py  test_pAnnData_filtering.py  test_pAnnData_import.py  test_pAnnData_preprocessing.py  test_pAnnData_summary.py  test_plotting.py  test_scviz_utils.py  test_utils.py
tutorials/: filtering.ipynb  importing.ipynb  index.html
tutorials/de/: index.html
tutorials/enrichment/: index.html
tutorials/filtering/: index.html
tutorials/importing/: index.html
tutorials/imputation/: index.html
tutorials/installation/: index.html
tutorials/plotting/: index.html
tutorials/quickstart/: index.html
tutorials/single_cell/: index.html
(+32 files in other folders)
