[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scviz"
version = "0.1.10"
authors = [
  {name="Marion Pang", email="sr_pang@hotmail.com"},
]
description = "A package to visualize single cell proteomics (and more to come!) data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy == 1.26.4",
  "pandas == 2.2.2", 
  "matplotlib == 3.8.4", 
  "seaborn == 0.13.2",
  "upsetplot == 0.9.0", 
  "scikit-learn == 1.4.2", 
  "scipy == 1.13.0",
  "umap-learn == 0.5.6", 
  "adjustText == 1.1.1", 
  "anndata == 0.10.7",
  "requests",
  "matplotlib_venn == 0.11.10",
  "pyarrow",
  "scanpy"
]

[project.urls]
Homepage = "https://github.com/gnaprs/scviz"
Issues = "https://github.com/gnaprs/scviz/issues"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.optional-dependencies]
pytest = ["openpyxl"]