[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scviz"
version = "0.2.1"
authors = [
  {name="Marion Pang", email="sr_pang@hotmail.com"},
]
description = "A package to visualize single cell proteomics (and more to come!) data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas", 
  "matplotlib", 
  "seaborn",
  "upsetplot", 
  "scikit-learn", 
  "scipy",
  "umap-learn", 
  "adjustText", 
  "anndata",
  "requests",
  "matplotlib_venn",
  "pyarrow",
  "scanpy",
  "IPython",
  "igraph",
  "harmonypy",
  "leidenalg",
  "scikit-misc"
]

[project.urls]
Homepage = "https://github.com/gnaprs/scviz"
Issues = "https://github.com/gnaprs/scviz/issues"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.connect",
    "ignore::DeprecationWarning:upsetplot.plotting"
]

[project.optional-dependencies]
pytest = ["openpyxl"]